--- a/k/cv/index.html
+++ b/k/cv/index.html
@@ -76,7 +76,7 @@
             </tr>
             <tr>
                 <td><font size="2">
-                </font></td>
+                </font>IT-sikkerhedsspecialist med fokus på bl.a. SIEM, sårbarhedsscanninger, patchpolitik, sikkerhedsprodukter samt awareness.</td>
             </tr>
             <tr>
                 <td nowrap="nowrap"><h3>Systemleder, Københavns Universitet</h3></td>
