--- a/index.html
+++ b/index.html
@@ -20,11 +20,12 @@
 	<meta name="msapplication-TileColor" content="#ffffff">
 	<meta name="msapplication-TileImage" content="favicon/ms-icon-144x144.png">
 	<meta name="theme-color" content="#ffffff">
-    <link rel="stylesheet"
-          href="https://fonts.googleapis.com/css?family=Libre+Franklin">
+    <link href="https://fonts.googleapis.com/css?family=Cabin&display=swap" rel="stylesheet">
+
+
     <style>
       body {
-        font-family: 'Libre Franklin', sans-serif;
+        font-family: 'Cabin', sans-serif;
         font-size: 124px;
 		text-align: center;
 		background-color: #ffd000;
