--- a/a-case-for-pure-html/index.html
+++ b/a-case-for-pure-html/index.html
@@ -25,7 +25,7 @@
   </head>
   <body>
       <h1>A Case For Pure HTML</h1>
-      <h3>Kresten Jacobsen - 2019-08-24</h3>
+      <h3>Kresten Jacobsen, 2019-08-24</h3>
       <hr>
       <p>There's like a gazillion fancy webframeworks, cool blog systems, static site generators, so why old timey <a href="https://en.wikipedia.org/wiki/HTML">HTML</a>?</p>
 
