--- a/a-case-for-pure-html/index.html
+++ b/a-case-for-pure-html/index.html
@@ -37,6 +37,6 @@
 
       <p>The fourth good reason for choosing to write in HTML is that it's <em>simple</em>. HTML is pretty straight forward - and if you want to you can read the full source for this site and edit it offline. I can use any editor I want on any computer. When I write a new post I just copy the old one and delete the content (I did that anyway with the static site generators).</p>
 
-      <p>Oh, and it's <em>fast</em>. Of course while you certainly can write slow sites by hand at least your in change. This site should load in less than a secon. If not something have gone wrong.</p>
+      <p>Oh, and it's <em>fast</em>. Of course while you certainly can write slow sites by hand at least you're in charge. This site should load in less than a secon. If not something have gone wrong...</p>
   </body>
 </html>
