--- a/a-case-for-pure-html/index.html
+++ b/a-case-for-pure-html/index.html
@@ -1,30 +1,12 @@
 <!DOCTYPE html>
 <html lang="da">
   <head>
-	<title>... kort for Jacobsen</title>
-
-	<link rel="apple-touch-icon" sizes="57x57" href="favicon/apple-icon-57x57.png">
-	<link rel="apple-touch-icon" sizes="60x60" href="favicon/apple-icon-60x60.png">
-	<link rel="apple-touch-icon" sizes="72x72" href="favicon/apple-icon-72x72.png">
-	<link rel="apple-touch-icon" sizes="76x76" href="favicon/apple-icon-76x76.png">
-	<link rel="apple-touch-icon" sizes="114x114" href="favicon/apple-icon-114x114.png">
-	<link rel="apple-touch-icon" sizes="120x120" href="favicon/apple-icon-120x120.png">
-	<link rel="apple-touch-icon" sizes="144x144" href="favicon/apple-icon-144x144.png">
-	<link rel="apple-touch-icon" sizes="152x152" href="favicon/apple-icon-152x152.png">
-	<link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-icon-180x180.png">
-	<link rel="icon" type="image/png" sizes="192x192"  href="favicon/android-icon-192x192.png">
-	<link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
-	<link rel="icon" type="image/png" sizes="96x96" href="favicon/favicon-96x96.png">
-	<link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
-	<link rel="manifest" href="favicon/manifest.json">
-	<meta name="msapplication-TileColor" content="#ffffff">
-	<meta name="msapplication-TileImage" content="favicon/ms-icon-144x144.png">
-	<meta name="theme-color" content="#ffffff">
+	<title>A Case For Handwritten HTML - Jacobsen</title>
     <link href="https://fonts.googleapis.com/css?family=Cabin|Old+Standard+TT&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./style.css">
   </head>
   <body>
-      <h1>A Case For Pure HTML</h1>
+      <h1>A Case For Handwritten HTML</h1>
       <h3>Kresten Jacobsen, 2019-08-24</h3>
       <hr>
       <p>There's like a gazillion fancy webframeworks, cool blog systems, static site generators, so why old timey <a href="https://en.wikipedia.org/wiki/HTML">HTML</a>?</p>
@@ -37,6 +19,6 @@
 
       <p>The fourth good reason for choosing to write in HTML is that it's <em>simple</em>. HTML is pretty straight forward - and if you want to you can read the full source for this site and edit it offline. I can use any editor I want on any computer. When I write a new post I just copy the old one and delete the content (I did that anyway with the static site generators).</p>
 
-      <p>Oh, and it's <em>fast</em>. Of course while you certainly can write slow sites by hand at least you're in charge. This site should load in less than a secon. If not something have gone wrong...</p>
+      <p>Oh, and it's <em>fast</em>. If you don't include a buttload of external dependencies and leverage a bit of caching you're going to have a fast site. Of course you certainly can write slow sites by hand, at least you decide. This site should load in less than a second. If not something must have gone wrong.</p>
   </body>
 </html>
