--- a/index.html
+++ b/index.html
@@ -20,11 +20,14 @@
 	<meta name="msapplication-TileColor" content="#ffffff">
 	<meta name="msapplication-TileImage" content="favicon/ms-icon-144x144.png">
 	<meta name="theme-color" content="#ffffff">
-    <link href="https://fonts.googleapis.com/css?family=Cabin&display=swap" rel="stylesheet">
-
+    <link href="https://fonts.googleapis.com/css?family=Cabin|Old+Standard+TT&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./style.css">
 
     <style>
       body {
+        margin-top: 10%;
+        margin-left: 20%;
+        margin-right: 20%;
         font-family: 'Cabin', sans-serif;
         font-size: 124px;
 		text-align: center;
@@ -39,7 +42,9 @@
     </style>
   </head>
   <body>
-	<br><br>
     <div><span></span></div>
+    <br><br>
+    <p>2019-08-24: <a href="./a-case-for-pure-html/">A Case For Handwritten HTML</a>
+    </p>
   </body>
 </html>
