--- a/bornholm-rundt-med-lasse/index.html
+++ b/bornholm-rundt-med-lasse/index.html
@@ -9,20 +9,22 @@
     <h1>Bornholm Rundt med Lasse</h1>
     <h3>Kresten Jacobsen, 2019-09-17</h3>
     <hr>
-    <p>Sidste år fik Lasse og jeg den geniale idé at løbe Bornholm rundt sammen. Det blev til seks etaper langs Bornholms kyst og ca. 110K under sålerne.</p>
+    <p>Sidste år fik Lasse og jeg den geniale idé at løbe Bornholm rundt sammen. Det blev til seks etaper langs Bornholms kyst og ca. 110K under sålerne.<br>
+    <img src="./IMG_3797.JPEG" alt="Lasse og klipperne" width="100%" style="float:center">
+    </p>
     <h2>Rønne -> Sandvig</h2>
-      <p>Første etape (25,5K, 16. oktober 2018): Start på eventyret rundt om øen. Fladt indtil Hasle, derefter godt kuperet.
-      <img src="./1/xxxx.jpg" alt="Foto fra turen" height="" width="">
+      <p><em>Første etape (25,5K, 16. oktober 2018):</em> Start på eventyret rundt om øen. Fladt indtil Hasle, derefter godt kuperet.
+      <img src="./1/" alt="Foto fra turen" height="" width="">
     </p>
     <h2>Sandvig -> Gudhjem</h2>
-      <p>Anden etape (15K, 17. april 2019): Klipper, sand og rullesten. Det går ikke hurtigt.</p>
+      <p><em>Anden etape (15K, 17. april 2019):</em> Klipper, sand og rullesten. Det går ikke hurtigt.</p>
     <h2>Gudhjem -> Svaneke</h2>
-      <p>Tredje etape 16K, 24. juli 2019): Op ad bakke ned ad bakke. Tyngdekraften er i mod mig...</p>
+      <p><em>Tredje etape 16K, 24. juli 2019):</em> Op ad bakke ned ad bakke. Tyngdekraften er i mod mig...</p>
     <h2>Svaneke -> Snogebæk</h2>
-      <p>Fjerde etape (16K, 1. august 2019): Klipper indtil Nexø, derefter fladt og strand ved Balka.</p>
+      <p><em>Fjerde etape (16K, 1. august 2019):</em> Klipper indtil Nexø, derefter fladt og strand ved Balka.</p>
     <h2>Snogebæk -> Vestre Sømark</h2>
-      <p>Femte etape (13K, 14. september 2019): Vind og sand men gode ben. Kunne godt have løbet længere her.</p>
+      <p><em>Femte etape (13K, 14. september 2019):</em> Vind og sand men gode ben. Kunne godt have løbet længere her.</p>
     <h2>Vestre Sømark -> Rønne</h2>
-      <p>Sjette etape (23K, 15. september 2019): Hård modvind, trætte stænger og mindre asfalt end frygtet. De sidste kilometer var lange.</p>
+      <p><em>Sjette etape (23K, 15. september 2019):</em> Hård modvind, trætte stænger og mindre asfalt end frygtet. De sidste kilometer var lange.</p>
   </body>
 </html>
