--- a/bornholm-rundt-med-lasse/index.html
+++ b/bornholm-rundt-med-lasse/index.html
@@ -14,17 +14,34 @@
     </p>
     <h2>Rønne -> Sandvig</h2>
       <p><em>Første etape (25,5K, 16. oktober 2018):</em> Start på eventyret rundt om øen. Fladt indtil Hasle, derefter godt kuperet.
-      <img src="./1/" alt="Foto fra turen" height="" width="">
+      <img src="./1/IMG_3795.JPEG" alt="Foto fra turen" width="100%">
+      <img src="./1/IMG_3802.JPEG" alt="Foto fra turen" width="100%">
+      <img src="./1/IMG_3803.JPEG" alt="Foto fra turen" width="100%">
+      <img src="./1/IMG_3805.JPEG" alt="Foto fra turen" width="100%">
     </p>
     <h2>Sandvig -> Gudhjem</h2>
       <p><em>Anden etape (15K, 17. april 2019):</em> Klipper, sand og rullesten. Det går ikke hurtigt.</p>
+      <img src="./2/IMG_5594.JPEG" alt="Foto fra turen" width="100%">
+      <img src="./2/IMG_5598.JPEG" alt="Foto fra turen" width="100%">
+      <img src="./2/IMG_5601.JPEG" alt="Foto fra turen" width="100%">
+      <img src="./2/IMG_5602.JPEG" alt="Foto fra turen" width="100%">
     <h2>Gudhjem -> Svaneke</h2>
       <p><em>Tredje etape 16K, 24. juli 2019):</em> Op ad bakke ned ad bakke. Tyngdekraften er i mod mig...</p>
+      <img src="./3/IMG_0355.JPG" alt="Foto fra turen" width="100%">
+      <img src="./3/IMG_0365.JPG" alt="Foto fra turen" width="100%">
+      <img src="./3/IMG_6227.JPEG" alt="Foto fra turen" width="100%">
+      <img src="./3/IMG_6228.JPEG" alt="Foto fra turen" width="100%">
+      <img src="./3/IMG_6243.JPG" alt="Foto fra turen" width="100%">
     <h2>Svaneke -> Snogebæk</h2>
       <p><em>Fjerde etape (16K, 1. august 2019):</em> Klipper indtil Nexø, derefter fladt og strand ved Balka.</p>
+      <img src="./4/IMG_6341.JPEG" alt="Foto fra turen" width="100%">
     <h2>Snogebæk -> Vestre Sømark</h2>
       <p><em>Femte etape (13K, 14. september 2019):</em> Vind og sand men gode ben. Kunne godt have løbet længere her.</p>
+      <img src="./5/IMG_6460.JPG" alt="Foto fra turen" width="100%">
     <h2>Vestre Sømark -> Rønne</h2>
       <p><em>Sjette etape (23K, 15. september 2019):</em> Hård modvind, trætte stænger og mindre asfalt end frygtet. De sidste kilometer var lange.</p>
+      <img src="./6/IMG_6462.JPEG" alt="Foto fra turen" width="100%">
+      <img src="./6/IMG_6465.JPEG" alt="Foto fra turen" width="100%">
+      <img src="./6/IMG_6467.JPEG" alt="Foto fra turen" width="100%">
   </body>
 </html>
