--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 		background-color: #ffd000;
 	  }
 	  div span:not(:hover):before {
-		content: "JCBSN.DK";
+		content: "JCBSN";
 	  }
 	  div span:hover:before {
 		content: "JACOBSEN";
